<resources>
    <string name="app_name">AU CIT Handbook</string>
    <string name="nav_header_title">AU CIT Handbook</string>
    <string name="nav_header_subtitle">info.au@phinmaed.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_shop">Shop</string>
    <string name="shop_reservations">Reservations</string>
    <string name="menu_uniform">Uniform</string>
    <string name="menu_map">Map</string>
    <string name="menu_scholarship">Scholarship</string>
    <string name="menu_event">Event</string>
    <string name="menu_studentManual">Student Manual</string>
    <string name="menu_faq">FAQ</string>

    <!-- Others... -->
    <string name="menu_title_others">Others</string>
    <string name="menu_about">About</string>
    <string name="menu_phinmaEducation">PHINMA Education</string>
    <string name="menu_developers">Developers</string>
    <string name="menu_contact">Contact</string>

    <string name="menu_logout">Log out</string>

    <string name="facebook_app_id">412619551151881</string>
    <string name="facebook_client_token">4e6c09a256c310349e34a5337a77f6c1</string>

    <string name="title_login"><u>Log in</u></string>
    <string name="title_sign_up"><u>Sign up</u></string>

    <string name="text_copyright">By <b><u>Team</u></b></string>
</resources>